Page Info (native Mac): truncate permission labels and add tooltip.

BUG=654268
TEST=Try the following on Mac twice, once with Chrome set to German, once with it set to Arabic (change this in `System Preferences.app` > `Language & Region` > Add to `Preferred languages:` and drag to top).
1) Visit google.com and click on the lock icon in the omnibox to open Page Info
2) Verify that the last permission (MIDI, with a keyboard icon) has a label is truncated using an ellipsis (note: Hebrew is an RTL language, so the ellipsis for it should be on the left)
3) Hover over the label, and check that it shows a full version of the truncated string.

Review-Url: https://codereview.chromium.org/2471253003
Cr-Commit-Position: refs/heads/master@{#429665}

Former-commit-id: 4d4e9096b9e299a1d910c2647c6328f30110b0c2